--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,11 +1,24 @@
 {
-    "manifest_version": 2,
-    "name": "Photograma",
-    "description": "Download Instagram stories with a Chrome extension",
-    "version": "0.1",
-    "icons": {
-        "16": "images/icon_16.png",
-        "48": "images/icon_48.png",
-        "128": "images/icon_128.png"
+  "manifest_version": 2,
+  "name": "Photograma",
+  "description": "Download Instagram stories with a Chrome extension",
+  "version": "0.1",
+  "icons": {
+    "16": "images/icon_16.png",
+    "48": "images/icon_48.png",
+    "128": "images/icon_128.png"
+  },
+  "permissions": ["activeTab", "declarativeContent"],
+  "background": {
+    "scripts": ["js/background.js"],
+    "persistent": false
+  },
+  "page_action": {
+    "default_popup": "html/popup.html",
+    "default_icon": {
+      "16": "images/icon_16.png",
+      "48": "images/icon_48.png",
+      "128": "images/icon_128.png"
     }
+  }
 }
