--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,6 +3,7 @@
   "name": "Photograma",
   "description": "Download Instagram stories with a Chrome extension",
   "version": "0.1",
+  "author": "saespmar",
   "icons": {
     "16": "images/icon_16.png",
     "48": "images/icon_48.png",
